--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=0.4">
@@ -22,55 +22,42 @@
 	<!-- /Yandex.Metrika counter -->
 </head>
 <body class="darkBody">
-<div id="field">
-	
-	<div id="messageArea">Крестики-нолики</div>
-
-	<div id="colorMode" class="darkMode"></div>
-
-	<div id="soundMode" class="sound"></div>
-
-	<div id="starScore">0</div>
-
-	<div id="board">
-
-		<div id="window" class="darkWindow">
-			<div id="chooseSymbol">
-				<p><b>Выберите символ</b></p>
-  			</div>	
-  			<div id="buttonX"></div>
-  			<div id="buttonO"></div>  				
+	<div id="field">
+		<div id="messageArea">Крестики-нолики</div>
+		<div id="colorMode" class="darkMode"></div>
+		<div id="soundMode" class="sound"></div>
+		<div id="starScore">0</div>
+		<div id="board">
+			<div id="window" class="darkWindow">
+				<div id="chooseSymbol">
+					<p><b>Выберите символ</b></p>
+	  			</div>	
+	  			<div id="buttonX"></div>
+	  			<div id="buttonO"></div>  				
+			</div>
+			<table id="table">
+				<tr>
+					<td id="00"></td>
+					<td id="01"></td>
+					<td id="02"></td>
+				</tr>
+				<tr>
+					<td id="10"></td>
+					<td id="11"></td>
+					<td id="12"></td>
+				</tr>
+				<tr>
+					<td id="20"></td>
+					<td id="21"></td>
+					<td id="22"></td>
+				</tr>
+			</table>
+			<div id="winLine"></div>
 		</div>
-
-		<table id="table">
-			<tr>
-				<td id="00"></td>
-				<td id="01"></td>
-				<td id="02"></td>
-			</tr>
-			<tr>
-				<td id="10"></td>
-				<td id="11"></td>
-				<td id="12"></td>
-			</tr>
-			<tr>
-				<td id="20"></td>
-				<td id="21"></td>
-				<td id="22"></td>
-			</tr>
-		</table>
-
-		<div id="winLine"></div>
-
-	</div>
-
 		<div id="statArea"></div>
-
 		<div id="newGameButton">Новая игра</div>
-
 		<div id="continueGameButton">Продолжить</div>
-
-</div>		
+	</div>		
 	<script src="xoxo.js"></script>	
 </body>
 </html>
