--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -4,6 +4,32 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=0.4">
 	<link rel="stylesheet" href="xoxo.css">
+	<link rel="preload" href="board.png" as="image">
+	<link rel="preload" href="button.png" as="image">
+	<link rel="preload" href="darkMode.png" as="image">
+	<link rel="preload" href="difEasy.png" as="image">
+	<link rel="preload" href="difNorm.png" as="image">
+	<link rel="preload" href="failStar.png" as="image">
+	<link rel="preload" href="lightMode.png" as="image">
+	<link rel="preload" href="logo.png" as="image">
+	<link rel="preload" href="mute.png" as="image">
+	<link rel="preload" href="o.png" as="image">
+	<link rel="preload" href="oButton.png" as="image">
+	<link rel="preload" href="sound.png" as="image">
+	<link rel="preload" href="star.png" as="image">
+	<link rel="preload" href="starScore.png" as="image">
+	<link rel="preload" href="winCol0.png" as="image">
+	<link rel="preload" href="winCol1.png" as="image">
+	<link rel="preload" href="winCol2.png" as="image">
+	<link rel="preload" href="winDia1.png" as="image">
+	<link rel="preload" href="winDia2.png" as="image">
+	<link rel="preload" href="winRow0.png" as="image">
+	<link rel="preload" href="winRow1.png" as="image">
+	<link rel="preload" href="winRow2.png" as="image">
+	<link rel="preload" href="winStar.png" as="image">
+	<link rel="preload" href="x.png" as="image">
+	<link rel="preload" href="xButton.png" as="image">
+	<link rel="preload" href="Capture_it-webfont.woff" as="font">
 	<title>Крестики-нолики</title>
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
