--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -52,6 +52,7 @@
 		<div id="header">КРЕСТИКИ-НОЛИКИ</div>
 		<div id="logo"></div>
 		<div id="loading">ЗАГРУЗКА</div>
+		<div id="loader"></div>
 	</div>
 	<div id="field">
 		<div id="messageArea">Крестики-нолики</div>
