--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=0.4">
 	<link rel="stylesheet" href="xoxo.css">
+	<link rel="preload" href="loader.gif" as="image">
 	<link rel="preload" href="board.png" as="image">
 	<link rel="preload" href="button.png" as="image">
 	<link rel="preload" href="darkMode.png" as="image">
