--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -60,7 +60,7 @@
 		<div id="colorMode" class="lightMode"></div>
 		<div id="soundMode" class="sound"></div>
 		<div id="starScore">0</div>
-		<div id="difMode" class="normal">/</div>
+		<div id="difMode" class="normal">C</div>
 		<div id="board">
 			<div id="window" class="lightWindow">
 				<div id="chooseSymbol">
