--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -61,6 +61,12 @@
 		<div id="soundMode" class="sound"></div>
 		<div id="starScore">0</div>
 		<div id="difMode" class="normal">C</div>
+		<div id="difWindow" style="display: none">
+			<div id="chooseDifHeader">Выберите уровень сложности</div>
+			<div id="difWindowText">Текущая игра будет завершена</div>
+			<div id="easyButton" class="unselEasyBut"><div id="easyText">ЛЕГКО</div></div>
+			<div id="normalButton" class="selNormBut"><div id="normText">НОРМАЛЬНО</div></div>
+		</div>
 		<div id="board">
 			<div id="window" class="lightWindow">
 				<div id="chooseSymbol">
