--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -29,6 +29,12 @@
 	<link rel="preload" href="winRow2.png" as="image">
 	<link rel="preload" href="winStar.png" as="image">
 	<link rel="preload" href="x.png" as="image">
+	<link rel="preload" href="easyButtonSelected.png" as="image">
+	<link rel="preload" href="easyButtonUnselected.png" as="image">
+	<link rel="preload" href="normalButtonSelected.png" as="image">
+	<link rel="preload" href="normalButtonUnselected.png" as="image">
+
+
 	<title>Крестики-нолики</title>
 	<!-- Yandex.Metrika counter -->
 	<script type="text/javascript" >
@@ -60,10 +66,10 @@
 		<div id="starScore">0</div>
 		<div id="difMode" class="normal">C</div>
 		<div id="difWindow" style="display: none">
-			<div id="chooseDifHeader">Выберите уровень сложности</div>
+			<div id="difWindowHeader">Выберите уровень сложности</div>
 			<div id="difWindowText">Текущая игра будет завершена</div>
-			<div id="easyButton" class="unselEasyBut"><div id="easyText">ЛЕГКО</div></div>
-			<div id="normalButton" class="selNormBut"><div id="normText">НОРМАЛЬНО</div></div>
+			<div id="easyButton" class="unselEasyBut">ЛЕГКО</div>
+			<div id="normalButton" class="selNormBut">НОРМАЛЬНО</div>
 		</div>
 		<div id="board">
 			<div id="window" class="lightWindow">
