--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -63,7 +63,7 @@
 		<div id="messageArea">Крестики-нолики</div>
 		<div id="colorMode" class="lightMode"></div>
 		<div id="soundMode" class="sound"></div>
-		<div id="starScore">0</div>
+		<div id="starScore"></div>
 		<div id="difMode" class="normal">C</div>
 		<div id="difWindow" style="display: none">
 			<div id="difWindowHeader">Выберите уровень сложности</div>
