local storage added

--- a/xoxo/xoxo.html
+++ b/xoxo/xoxo.html
@@ -52,7 +52,7 @@
 	<noscript><div><img src="https://mc.yandex.ru/watch/72061369" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
 </head>
-<body class="lightBody">
+<body>
 	<div id="loadScreen">
 		<div id="header">КРЕСТИКИ-НОЛИКИ</div>
 		<div id="logo"></div>
@@ -61,8 +61,8 @@
 	</div>
 	<div id="field">
 		<div id="messageArea">Крестики-нолики</div>
-		<div id="colorMode" class="lightMode"></div>
-		<div id="soundMode" class="sound"></div>
+		<div id="colorMode"></div>
+		<div id="soundMode"></div>
 		<div id="starScore"></div>
 		<div id="difMode" class="normal">C</div>
 		<div id="difWindow" style="display: none">
@@ -72,7 +72,7 @@
 			<div id="normalButton" class="selNormBut">НОРМАЛЬНО</div>
 		</div>
 		<div id="board">
-			<div id="window" class="lightWindow">
+			<div id="window">
 				<div id="chooseSymbol">
 					<p><b>Выберите символ</b></p>
 	  			</div>	
