--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</header>
 	<div id="intro"><p>Добро пожаловать!<br>Здесь можно найти развлечение по вкусу: сыграть в игру, посмотреть рецепты или видео с котами!</p></div>
 	<div id="content">
-		<div id="cB1"><a href="xoxo/xoxo.html">Сыграйте в крестики-нолики</a></div>
+		<div id="cB1"><a href="https://idevm.github.io/XO/">Сыграйте в крестики-нолики</a></div>
 		<div id="cB2"><a href="battleships/battleships.html">Сыграйте в морской бой</a></div>
 		<div id="cB3"><a href="receipts/zapekanki.html">Посмотрите рецепты запеканок</a></div>
 		<div id="cB4"><a href="more.html">Еще много интересного</a></div>
