--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div id="cB1"><a href="https://idevm.github.io/XO/">Сыграйте в крестики-нолики</a></div>
 		<div id="cB2"><a href="battleships/battleships.html">Сыграйте в морской бой</a></div>
 		<div id="cB3"><a href="receipts/zapekanki.html">Посмотрите рецепты запеканок</a></div>
-		<div id="cB4"><a href="more.html">Еще много интересного</a></div>
+		<div id="cB4"><a href="https://idevm.github.io/sudoku/">Еще много интересного</a></div>
 	</div>
 	<div id="video"><div class="v"><video controls loop height="240px" preload="auto" src="nyam.mp4"></video></div></div>
 	<footer>
